Fixes some spacings in the system section.

--- a/css/index.css
+++ b/css/index.css
@@ -441,7 +441,8 @@ h4 {
     margin-block-start: 145px; }
   .system__navigation--container {
     max-width: 573px;
-    margin-block-start: 133px; }
+    margin-block-start: 133px;
+    margin-inline-start: 40px; }
   .system__list_item {
     padding-block-end: 32px; } }
 
